# panda_arm_kinematics_test

./: .rosinstall.bak  README.md
kinematics_test/: CMakeLists.txt  README.md  package.xml
kinematics_test/config/: rosconsole.config
kinematics_test/launch/: angle_log.launch  graph_visualize.launch  planning_time_com.launch  pose_in_rviz.launch  pose_test.launch  test.launch  test_all_angle.launch  trigonometry_test.launch
kinematics_test/scripts/: add_obstacle.py  test_moveit.py
kinematics_test/src/: angle_log.cpp  graph_visualize.py  joint_pub.cpp  joint_state_subscriber.cpp  planning_time_com.cpp  pose_in_rviz.cpp  pose_test.cpp  test_all_angle.cpp
moveit_tutorials/doc/move_group_interface/: CMakeLists.txt
moveit_tutorials/doc/move_group_interface/src/: graph_visualize.py  planner.cpp
panda_moveit_config/: .setup_assistant
panda_moveit_config/config/: kinematics.yaml  panda.srdf.xacro
panda_moveit_config/launch/: demo.launch
panda_panda_arm_ikfast_plugin/: CMakeLists.txt  package.xml  panda_panda_arm_moveit_ikfast_plugin_description.xml  update_ikfast_plugin.sh
panda_panda_arm_ikfast_plugin/src/: panda_panda_arm_ikfast_moveit_plugin.cpp  panda_panda_arm_ikfast_solver.cpp
